welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:43: error: ')' expected but '}' found.
	}
        ^